solved issue sizing on mobile csv icon

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -609,6 +609,9 @@ section{
 }
 
 .download-csv{
+   padding-top: 13px;
+  width:68px;
+  height:87px;
   padding-right: 10px;
   cursor:pointer;
 }
@@ -802,6 +805,12 @@ article{
 .masthead{
   height:15px;
 }
+
+.download-csv {
+    padding-right: 10px;
+    padding-top: 13px;
+  
+  }
 
 
 }
